fix background on firefox

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 }
 
 html {
+    height: 100%;
+    width:  100%;
     background-image: url('media/background.gif');
     background-repeat: repeat;
     background-size: auto;
